# 3D_Solar_System_C-_OpenGL

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
assets/: README.md
shaders/: fragment.glsl  vertex.glsl
src/: CMakeLists.txt  camera.cpp  camera.h  main  main.cpp  mesh.cpp  mesh.h  planet.cpp  planet.h  shader.cpp  shader.h
